--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@ layout: default
 ---
 <div class="wrapper no-mobile">
 <ul id="sb-slider" class="sb-slider">
-  {% for page in site.posts reversed %}
-  {% if page.published %}
+  {% for page in site.posts %}
 	<li>
 		<a href="{{ page.permalink }}"><img class="front-cover" src="{{ baseurl }}/assets/img/covers/{{ page.cover }}" alt="{{ page.title }}"/></a>
     <div class="sb-description">
-      {% if page.published %}
+      {% if page.released %}
       <a href="{{ page.permalink }}">
 			     <h3>{{ page.title }}</h3>
            <p>{{ page.description }}</p>
@@ -20,7 +19,6 @@ layout: default
       {% endif %}
 		</div>
 	</li>
-  {% endif %}
   {% endfor %}
 </ul>
 
@@ -38,7 +36,7 @@ layout: default
     <li>
       <a href="{{ page.permalink }}"><img src="{{ baseurl }}/assets/img/covers/{{ page.cover }}" alt="{{ page.title }}"/></a>
       <div class="book-description">
-        {% if page.published %}
+        {% if page.released %}
         <a href="{{ page.permalink }}">
              <h3>{{ page.title }}</h3>
              <p>{{ page.description }}</p>
